[build-system]
requires = ["setuptools>=64.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "diceroller"
version = "0.1.5"
description = "Library for dice"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cmake>=4.0.3",
    "numpy>=2.3.2",
    "scikit-build>=0.18.1",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.17.0",
    "ruff>=0.12.5",
    "pytest>=7.0"  # Если нужны тесты
]

# Ваши текущие настройки Ruff остаются здесь
[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]
line-length = 120
indent-width = 4

[tool.ruff.lint]
preview = true
future-annotations = true
select = [
        # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    "C90",
    "PL",
    "RUF",
    "TRY",
    "ANN",
    "S",
    "B",
    "D",
    "N",
    "PL"
]
fixable = ["ALL"]
unfixable = []
ignore = ["PLR6301", "TRY003", "D212", "D211", "RUF002", "D203"]

[tool.ruff.format]
docstring-code-format = true
